Fixed build issues