@@ -15,6 +15,7 @@
 	<description>LightQ is a lightweight, high-performance message queue service built with Spring Boot. It provides a RESTful API for pushing, popping, and viewing messages in different consumer groups.</description>
 	<properties>
 		<java.version>21</java.version>
+		
 	</properties>
 	<dependencies>
 		<dependency>
@@ -42,11 +43,7 @@
 			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
 			<version>2.6.0</version>
 		</dependency>
-        <dependency>
-			<groupId>org.projectlombok</groupId>
-			<artifactId>lombok</artifactId>
-			<optional>true</optional>
-		</dependency>
+        
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
@@ -72,6 +69,7 @@
 				<configuration>
 					<source>21</source>
 					<target>21</target>
+					
 				</configuration>
 			</plugin>
 			<plugin>
@@ -82,6 +80,9 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>3.2.5</version>
+				<configuration>
+					<argLine>-Dnet.bytebuddy.experimental=true</argLine>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
